# ackermanndrive

./: CMakeLists.txt  notes.txt  package.xml
URDF/: simple_ackermann.gv  simple_ackermann.urdf
launch/: ackermann.launch  display.launch  gazebo.launch  robot.launch  xacrodisplay.launch
plugin/: ackermann_motion_model.cpp  ackermann_motion_model.hpp  ackermanndrive_iws_plugin.cpp  ackermanndrive_iws_plugin.h  ackermanndrive_plugin.cpp  ackermanndrive_plugin.h
xacro/: simple_ackermann.xacro  simple_ackermann_plugin.xacro
